<resources>
    <string name="app_name">OLI APP</string>

    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>

    <string name="create_an_account">CREATE AN ACCOUNT</string>

    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>

    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u> Terms &amp; Condition </u></string>
    <string name="btn_lbl_register">Register</string>

    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>

    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition.</string>

    <string name="please_wait">Please Wait&#8230;</string>
    <string name="submit">SUBMIT</string>
    <string name="forgotPwMsg">Enter e-mail address and an email will be sent to reset your password.</string>
    <string name="email_sent_success">Password reset e-mail sent.</string>
    <string name="registerSuccess">Registration Complete</string>
    <string name="title_complete_profile">COMPLETE PROFILE</string>
    <string name="title_edit_profile">EDIT PROFILE</string>
    <string name="et_hint_mobile_number">Phone</string>
    <string name="btn_lbl_save">SAVE</string>
    <string name="read_storage_permission_denied">Permission Denied, You can allow this permissions from settings if desired</string>
    <string name="image_select_fail">Failed to select image</string>
    <string name="err_msg_enter_mobile_number">Enter Mobile Number</string>
    <string name="profile_update_success">Profile Updated.</string>
    <!--    <string name="title_activity_dashboard">MainActivity</string>-->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="back_again_to_exit">Click back again to exit</string>
    <string name="title_projects">Projects</string>
    <string name="title_collaborators">Collaborators</string>
    <string name="action_settings">Settings</string>
    <string name="btn_lbl_logout">Logout</string>
    <string name="lbl_addresses">Source</string>
    <string name="title_settings">Settings</string>
    <string name="lbl_edit">Edit</string>
    <string name="action_add_project">Add Project</string>
    <string name="title_add_project">ADD PROJECT</string>
    <string name="et_hint_project_title">Project Title</string>
    <string name="et_hint_project_price">Project Price ($)</string>
    <string name="et_hint_project_description">Project Description</string>
    <string name="et_hint_project_quantity">Project Quantity</string>

    <string name="err_msg_select_project_image">Please select project image.</string>
    <string name="err_msg_enter_project_title">Please enter project title.</string>
    <string name="err_msg_enter_project_languages">Please enter project languages.</string>
    <string name="err_msg_enter_project_description">Please enter project description.</string>
    <string name="err_msg_enter_project_repo">Please enter project repository.</string>

    <string name="project_uploaded_success_message">Your project is uploaded successfully.</string>
    <string name="no_projects_added_yet">No projects added yet!</string>
    <string name="no_dashboard_item_found">No projects found!</string>

    <string name="project_delete_success_message">Your project is deleted successfully.</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">Are you sure you want to delete the project?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="btn_lbl_submit">SUBMIT</string>
    <string name="et_hint_project_languages">Languages</string>
    <string name="et_hint_project_repository">Repository</string>
    <string name="project_upload_success">Project Upload Complete</string>
    <string name="no_products_added_yet">No Projects Added Yet.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_project_description">Project Details</string>
    <string name="lbl_project_description">Project Description</string>
    <string name="lbl_project_details_languages">Languages</string>
    <string name="title_project_details">PROJECT DETAILS</string>
    <string name="btn_lbl_join_project">Join Project</string>
    <string name="btn_lbl_message_creator">Message Creator</string>
    <string name="et_hint_project_contact">Project Contact</string>


</resources>