<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.ProjectDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_project_details_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/background_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/toolbar_title_paddingStart"
            android:paddingEnd="0dp"
            android:text="@string/title_project_details"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/toolbar_title_text_size"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_project_details_activity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_project_detail_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/project_detail_image_height"
                android:background="@color/colorImageViewBackground"
                android:contentDescription="@string/content_description"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/ll_project_details_title_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/project_details_title_price_marginTop"
                android:background="@color/dashboard_item_details_bg"
                android:orientation="vertical"
                android:padding="@dimen/project_details_title_price_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_project_detail_image">

                <TextView
                    android:id="@+id/tv_project_details_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/item_value_text_color"
                    android:textSize="@dimen/project_details_title_textSize"
                    android:text="@string/et_hint_project_contact"
                    tools:text="Project Contact" />

                <TextView
                    android:id="@+id/tv_project_details_owner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/item_value_text_color"
                    android:textSize="@dimen/project_details_price_textSize"
                    tools:text="Project Creator" />

                <TextView
                    android:id="@+id/tv_project_details_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/item_value_text_color"
                    android:textSize="@dimen/project_details_price_textSize"
                    tools:text="Project Creator" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_project_details_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/project_details_label_margin"
                android:text="@string/lbl_project_description"
                android:textColor="@color/item_value_text_color"
                android:textSize="@dimen/project_details_label_textSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_project_details_title_price" />

            <TextView
                android:id="@+id/tv_project_details_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/project_details_label_margin"
                android:layout_marginEnd="@dimen/project_details_label_margin"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/project_details_description_textSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_project_details_label"
                tools:text="This is project details description." />

            <LinearLayout
                android:id="@+id/ll_project_details_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/project_details_label_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_project_details_description">

                <TextView
                    android:id="@+id/tv_project_details_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/project_details_stock_quantity_paddingStartEnd"
                    android:text="@string/lbl_project_details_languages"
                    android:textColor="@color/item_value_text_color"
                    android:textSize="@dimen/project_details_label_textSize" />

                <TextView
                    android:id="@+id/tv_project_details_languages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/item_grey_border_background"
                    android:paddingStart="@dimen/project_details_stock_quantity_paddingStartEnd"
                    android:paddingTop="@dimen/project_details_stock_quantity_paddingTopBottom"
                    android:paddingEnd="@dimen/project_details_stock_quantity_paddingStartEnd"
                    android:paddingBottom="@dimen/project_details_stock_quantity_paddingTopBottom"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/project_details_stock_quantity_textSize"
                    android:textStyle="bold"
                    tools:text="C#, Ketlin" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_join_project"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_background"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="@dimen/btn_padding"
                android:paddingBottom="@dimen/btn_padding"
                android:text="@string/btn_lbl_join_project"
                android:textColor="@android:color/white"
                android:textSize="@dimen/btn_textSize"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_project_details_quantity"
                tools:visibility="visible" />

            <Button
                android:id="@+id/btn_message_creator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_background"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="@dimen/btn_padding"
                android:paddingBottom="@dimen/btn_padding"
                android:text="@string/btn_lbl_message_creator"
                android:textColor="@android:color/white"
                android:textSize="@dimen/btn_textSize"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_join_project"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>